--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>MaxFit</title>
 
 
   <!--Fonts-->
@@ -29,7 +29,7 @@
 </head>
 <body>
   <div class="sidebar d-lg-none d-md-block">
-    <div class="sidebar-gym-logo">Gym</div>
+    <div class="sidebar-gym-logo">Max<span class="logo-2">Fit</span></div>
     <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-x-lg x-svg" viewBox="0 0 16 16">
       <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
     </svg>
@@ -48,7 +48,7 @@
     <div class="container-fluid px-5">
       <div class="row align-items-center">
         <div class="col-7">
-          <div class="gym-logo">Gym</div>
+          <div class="gym-logo">Max<span class="logo-2">Fit</span></div>
         </div>
         <div class="col-5 d-flex justify-content-end align-items-center">
           <div class="nav-links-container d-none d-lg-block">
@@ -68,11 +68,28 @@
   <header id="header">
     <div class="header-overlay"></div>
     <div class="header-content">
-    <h1 class="header-title">Achieve Your Best Self <br> We Specialize In:
+    <h1 class="header-title">Achieve Your Best Self. <br> We Specialize In:
       <br>
       <span class="banner-skills"> 
       </span>
     </h1>
+  </div>
+  <div class="header-social-media">
+    <button class="header-social-button">
+      <svg class="header-social-icon" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+        <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
+      </svg>
+    </button>
+    <button class="header-social-button">
+      <svg xmlns="http://www.w3.org/2000/svg" class="header-social-icon" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
+        <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
+      </svg>
+    </button>
+    <button class="header-social-button">
+      <svg xmlns="http://www.w3.org/2000/svg" class="header-social-icon" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+        <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+      </svg>
+    </button>
   </div>
   </header>
 
