responsive fixed banner

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
   
   <header id="header">
     <div class="header-overlay"></div>
-    <div class="header-content">
+    <div class="header-container">
+    <div class="header-left">
     <h1 class="header-title">Achieve Your Best Self. <br> We Specialize In:
       <br>
       <span class="banner-skills"> 
@@ -91,6 +92,7 @@
       </svg>
     </button>
   </div>
+</div>
   </header>
 
   <script src="js/sidebar.js"></script>
