about section done

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="css/general.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/about.css">
 
   
 </head>
@@ -45,19 +46,19 @@
 
 
   <nav id="nav">
-    <div class="container-fluid px-5">
+    <div class="container-fluid">
       <div class="row align-items-center">
-        <div class="col-7">
-          <div class="gym-logo">Max<span class="logo-2">Fit</span></div>
+        <div class="col-lg-6 col-sm-2">
+          <div class="gym-logo ps-3">Max<span class="logo-2">Fit</span></div>
         </div>
-        <div class="col-5 d-flex justify-content-end align-items-center">
+        <div class="col-lg-6 col-sm-10 d-flex justify-content-end align-items-center">
           <div class="nav-links-container d-none d-lg-block">
           <a class="nav-links" href="">About us</a>
           <a class="nav-links" href="">Our trainers</a>
           <a class="nav-links" href="">Timetable</a>
           <button class="nav-button">Join now</button>
         </div>
-        <svg class="hamburger-menu d-lg-none d-md-block" xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-list" viewBox="0 0 16 16">
+        <svg class="hamburger-menu d-lg-none d-md-block me-3" xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-list" viewBox="0 0 16 16">
           <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
         </svg>
         </div>
@@ -95,6 +96,50 @@
 </div>
   </header>
 
+  <section id="about">
+    <div class="about-title">Elevate Your Workout Experience</div>
+      <div class="container-fluid px-3">
+        <div class="row">
+          <div class="col-lg-5 col-md-12 d-flex justify-content-center">
+            <img class="about-img mt-5" src="imgs/man2.png" alt="" title="Image by @Luis_molinero on Freepik">
+          </div>
+          <div class="col-lg-7 col-md-12 pt-5 px-5">
+            <p class="about-desc">At <span class="logo-text">Max<span class="logo-2">Fit</span></span>, we believe that fitness isn’t just about lifting weights or running on treadmills—it’s about creating a healthier, happier, and stronger you. Our mission is to empower our community through personalized fitness programs, expert coaching, and a supportive environment where everyone can thrive, no matter their starting point.
+              <br>
+              <br>
+              We’ve designed our facility to cater to all levels, from beginners taking their first steps towards a healthier lifestyle to seasoned athletes striving for peak performance. Our team of certified trainers is dedicated to helping you achieve your goals, whether that’s shedding a few pounds, building lean muscle, or simply feeling more energized and confident.
+          </p>
+            <div class="row pt-5 g-3">
+              <div class="col-lg-6 col-md-12">
+                <div class="about-card px-3">
+                  <div class="about-card-title">More Than a Gym</div>
+                  <p class="about-card-text">At <span class="logo-text">Max<span class="logo-2">Fit</span></span>, you’re not just a member—you’re part of a supportive family. We’re here to lift each other up, every step of the way.</p>
+                </div>
+              </div>
+              <div class="col-lg-6 col-md-12">
+                <div class="about-card px-3">
+                  <div class="about-card-title">Your Goals, Our Mission</div>
+                  <p class="about-card-text">Our dedicated trainers and personalized programs are designed to help you reach your unique fitness goals—no matter where you’re starting from.</p>
+                </div>
+              </div>
+              <div class="col-lg-6 col-md-12">
+                <div class="about-card px-3">
+                  <div class="about-card-title">Fun & Fitness</div>
+                  <p class="about-card-text">From dynamic classes to energizing workouts, we make fitness enjoyable and motivating, so you’ll look forward to every session.</p>
+                </div>
+              </div>
+              <div class="col-lg-6 col-md-12">
+                <div class="about-card px-3">
+                  <div class="about-card-title"> Everyone’s Welcome </div>
+                  <p class="about-card-text">Whether you’re a beginner or a pro, we have the space, equipment, and community to support your journey to becoming your best self.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    
+  </section>
   <script src="js/sidebar.js"></script>
   <script src="js/skills.js"></script>
 </body>
