about page done, website basically done

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
   <body>
     <div class="sidebar d-lg-none d-md-block">
       <div class="sidebar-links">
-        <a class="sidebar-link" href="#about">About us</a>
+        <a class="sidebar-link" href="about.html">About us</a>
         <a class="sidebar-link" href="#trainers">Our trainers</a>
+        <a class="nav-links" href="#contacts">Contact us</a>
         <a class="sidebar-link" href="#memberships">Memberships & Pricing</a>
         <a class="sidebar-button" href="#memberships">Join now</a>
       </div>
@@ -55,11 +56,12 @@
 
     <nav data-aos="fade-down" data-aos-duration="600" id="nav">
       <div class="container-fluid nav-container">
-        <div class="gym-logo">Max<span class="logo-2">Fit</span></div>
+        <a href="index.html" class="gym-logo">Max<span class="logo-2">Fit</span></a>
 
         <div class="nav-links-container d-none d-lg-flex">
-          <a class="nav-links" href="#about">About us</a>
+          <a class="nav-links" href="about.html">About us</a>
           <a class="nav-links" href="#trainers">Our trainers</a>
+          <a class="nav-links" href="#contacts">Contact us</a>
           <a class="nav-links" href="#memberships">Memberships & Pricing</a>
           <a class="nav-button" href="#memberships">Join now</a>
         </div>
@@ -209,7 +211,7 @@
 
     <section id="trainers">
       <div class="container mt-5 d-flex justify-content-center align-items-center flex-column">
-      <h1 data-aos="fade-right" class="trainers-title">Our trainers:</h1>
+      <h1 data-aos="fade-right" class="trainers-title">Trainers of the month:</h1>
         <div class="row g-5 align-items-end">
 
           <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center">
