--- a/about.html
+++ b/about.html
@@ -44,6 +44,7 @@
     <div class="sidebar d-lg-none d-md-block">
       <div class="sidebar-links">
         <a class="sidebar-link" href="about.html">About us</a>
+        <a class="sidebar-link" href="index.html#nutrition">Nutrition Calculator</a>
         <a class="sidebar-link" href="index.html#trainers">Our trainers</a>
         <a class="sidebar-link" href="index.html#contacts">Contact us</a>
         <a class="sidebar-link" href="index.html#memberships">Memberships & Pricing</a>
@@ -58,6 +59,7 @@
         <div class="nav-links-container d-none d-lg-flex">
           <a class="nav-links" href="about.html">About us</a>
           <a class="nav-links" href="index.html#trainers">Our trainers</a>
+          <a class="nav-links" href="index.html#nutrition">Nutrition Calculator</a>
           <a class="nav-links" href="index.html#contacts">Contact us</a>
           <a class="nav-links" href="index.html#memberships">Memberships & Pricing</a>
           <a class="nav-button" href="index.html#memberships">Join now</a>
@@ -293,6 +295,7 @@ Our gym is fully equipped for all kinds of workouts, from free weights and machi
                 <li><a href="#trainers">Our Trainers</a></li>
                 <li><a href="#memberships">Memberships</a></li>
                 <li><a href="#contacts">Contact Us</a></li>
+                <li><a href="#faq">FAQs</a></li>
               </ul>
             <h3 class="links-title pt-5">Contact Informations</h3>
               <ul class="list-unstyled">
