--- a/about.html
+++ b/about.html
@@ -44,10 +44,9 @@
     <div class="sidebar d-lg-none d-md-block">
       <div class="sidebar-links">
         <a class="sidebar-link" href="about.html">About us</a>
+        <a class="sidebar-link" href="announcements.html">Announcements</a>
         <a class="sidebar-link" href="index.html#nutrition">Nutrition Calculator</a>
-        <a class="sidebar-link" href="index.html#trainers">Our trainers</a>
         <a class="sidebar-link" href="index.html#contacts">Contact us</a>
-        <a class="sidebar-link" href="index.html#memberships">Memberships & Pricing</a>
         <a class="sidebar-button" href="index.html#memberships">Join now</a>
       </div>
     </div>
@@ -58,10 +57,9 @@
 
         <div class="nav-links-container d-none d-lg-flex">
           <a class="nav-links" href="about.html">About us</a>
-          <a class="nav-links" href="index.html#trainers">Our trainers</a>
+          <a class="nav-links" href="announcements.html">Announcements</a>
           <a class="nav-links" href="index.html#nutrition">Nutrition Calculator</a>
           <a class="nav-links" href="index.html#contacts">Contact us</a>
-          <a class="nav-links" href="index.html#memberships">Memberships & Pricing</a>
           <a class="nav-button" href="index.html#memberships">Join now</a>
         </div>
 
@@ -233,7 +231,7 @@ Our gym is fully equipped for all kinds of workouts, from free weights and machi
           </div>
         </div>
       
-        <div data-aos="fade-right" data-aos-delay="300" class="faq-item">
+        <div data-aos="fade-right" data-aos-delay="100" class="faq-item">
           <div class="faq-question">
             Is there a beginner-friendly program?
             <span class="faq-icon">+</span>
@@ -243,7 +241,7 @@ Our gym is fully equipped for all kinds of workouts, from free weights and machi
           </div>
         </div>
       
-        <div data-aos="fade-right" data-aos-delay="400" class="faq-item">
+        <div data-aos="fade-right" data-aos-delay="200" class="faq-item">
           <div class="faq-question">
             Can I try the gym before joining?
             <span class="faq-icon">+</span>
@@ -292,7 +290,7 @@ Our gym is fully equipped for all kinds of workouts, from free weights and machi
             <h3 class="links-title">Quick Links</h3>
               <ul class="list-unstyled">
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="#trainers">Our Trainers</a></li>
+                <li><a href="announcements.html">Announcements</a></li>
                 <li><a href="#memberships">Memberships</a></li>
                 <li><a href="#contacts">Contact Us</a></li>
                 <li><a href="#faq">FAQs</a></li>
