--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 <div class="trainer-name">Trainer name</div>
                 <p class="trainer-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, fuga?</p>
               </div>
-              <div class="trainer-img trainer-1"></div>
+              <div class="trainer-img trainer-1" title="Image by Freepik on Freepik"></div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center">
@@ -230,7 +230,7 @@
                 <div class="trainer-name">Trainer name</div>
                 <p class="trainer-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, fuga?</p>
               </div>
-              <div class="trainer-img trainer-2"> </div>
+              <div class="trainer-img trainer-2" title="Image by Freepik on Freepik"> </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center">
@@ -239,7 +239,7 @@
                 <div class="trainer-name">Trainer name</div>
                 <p class="trainer-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, fuga?</p>
               </div>
-              <div class="trainer-img trainer-3"></div>
+              <div class="trainer-img trainer-3" title="Image by pressfoto on Freepik"></div>
             </div>
           </div>
         </div>
