gallery done, added submit btn to form

--- a/about.html
+++ b/about.html
@@ -45,6 +45,7 @@
       <div class="sidebar-links">
         <a class="sidebar-link" href="about.html">About us</a>
         <a class="sidebar-link" href="announcements.html">Announcements</a>
+        <a class="sidebar-link" href="gallery.html">Gallery</a>
         <a class="sidebar-link" href="index.html#nutrition">Nutrition Calculator</a>
         <a class="sidebar-link" href="index.html#contacts">Contact us</a>
         <a class="sidebar-button" href="index.html#memberships">Join now</a>
@@ -58,6 +59,7 @@
         <div class="nav-links-container d-none d-lg-flex">
           <a class="nav-links" href="about.html">About us</a>
           <a class="nav-links" href="announcements.html">Announcements</a>
+          <a class="nav-links" href="gallery.html">Gallery</a>
           <a class="nav-links" href="index.html#nutrition">Nutrition Calculator</a>
           <a class="nav-links" href="index.html#contacts">Contact us</a>
           <a class="nav-button" href="index.html#memberships">Join now</a>
@@ -291,6 +293,7 @@ Our gym is fully equipped for all kinds of workouts, from free weights and machi
               <ul class="list-unstyled">
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="announcements.html">Announcements</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="#memberships">Memberships</a></li>
                 <li><a href="#contacts">Contact Us</a></li>
                 <li><a href="#faq">FAQs</a></li>
