--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
 <script>
   AOS.init();
 </script>
-    <script src="js/owl.js"></script>
+    <script src="js/formValidation.js"></script>
     <script src="js/sidebar.js"></script>
     <script src="js/skills.js"></script>
     <script src="js/nutrition.js"></script>
