form submit loading, website loader

--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
     <link rel="stylesheet" href="css/footer.css" />
   </head>
   <body>
+
+    <div id="preloader">
+      <div class="spinner-wrapper">
+        <svg class="custom-spinner" width="50" height="50" viewBox="0 0 50 50">
+          <circle cx="25" cy="25" r="20" fill="none" stroke="white" stroke-width="5" stroke-linecap="round" stroke-dasharray="100" stroke-dashoffset="60">
+            <animateTransform attributeName="transform" type="rotate" from="0 25 25" to="360 25 25"
+              dur="1s" repeatCount="indefinite" />
+          </circle>
+        </svg>
+      </div>
+    </div>
+
     <div class="sidebar d-lg-none d-md-block">
       <div class="sidebar-links">
         <a class="sidebar-link" href="about.html">About us</a>
@@ -447,21 +459,27 @@
                 <div class="row">
                   <div class="col-lg-6 col-md-12">
                     <input type="text" class="first-name-input" placeholder="First Name">
+                    <div class="error-message"></div>
                   </div>
                   <div class="col-lg-6 col-md-12">
                     <input type="text" class="last-name-input" placeholder="Last name">
+                    <div class="error-message"></div>
                   </div>
                   <div class="col-12">
                 <input type="text" class="subject-input" placeholder="Subject">
+                <div class="error-message"></div>
                   </div>
                   <div class="col-12">
                     <input type="email" class="email-input" placeholder="Email">
+                    <div class="error-message"></div>
                   </div>
                   <div class="col-12">
                     <textarea name="" id="" placeholder="Your Message"></textarea>
+                    <div class="error-message"></div>
                   </div>
                   <div class="col-12">
-                    <button type="submit" class="form-submit">Submit</button>
+                    <button type="submit" class="form-submit">
+                      <span class="submit-btn-text">Submit</span></button>
                   </div>
                 </div>
               </form>
@@ -606,6 +624,16 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
   AOS.init();
+</script>
+<script>
+  window.addEventListener('load', function () {
+    const preloader = document.getElementById('preloader');
+    preloader.style.opacity = '0';
+    setTimeout(() => {
+      preloader.style.display = 'none';
+    }, 500);
+  });
+
 </script>
     <script src="js/formValidation.js"></script>
     <script src="js/sidebar.js"></script>
